// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checked status 1`] = `
<label
  className="sc-AxjAm hgwlTJ"
>
  <label
    className="sc-AxirZ jTtBsr"
    height={34}
    width={60}
  >
    <input
      checked={true}
      className="sc-AxiKw fIhHZr"
      type="checkbox"
    />
    <span
      className="sc-AxhCb fqtWHo"
    />
  </label>
</label>
`;

exports[`Disabled status 1`] = `
<label
  className="sc-AxjAm hgwlTJ"
>
  <label
    className="sc-AxirZ jTtBsr"
    height={34}
    width={60}
  >
    <input
      className="sc-AxiKw fIhHZr"
      disabled={true}
      type="checkbox"
    />
    <span
      className="sc-AxhCb fqtWHo"
    />
  </label>
</label>
`;

exports[`Display custom background colors 1`] = `
<label
  className="sc-AxjAm hgwlTJ"
>
  <label
    className="sc-AxirZ jTtBsr"
    height={34}
    width={60}
  >
    <input
      className="sc-AxiKw cSeDzH"
      type="checkbox"
    />
    <span
      className="sc-AxhCb bfZgzg"
    />
  </label>
</label>
`;

exports[`Display custom sizes 1`] = `
<label
  className="sc-AxjAm hgwlTJ"
>
  <label
    className="sc-AxirZ cnvPaE"
    height={20}
    width={40}
  >
    <input
      className="sc-AxiKw jMbJib"
      type="checkbox"
    />
    <span
      className="sc-AxhCb dIoJDo"
    />
  </label>
</label>
`;

exports[`Display left label 1`] = `
<label
  className="sc-AxjAm hgwlTJ"
>
  <span
    className="sc-AxhUy yTwGS"
  >
    Label
  </span>
  <label
    className="sc-AxirZ jTtBsr"
    height={34}
    width={60}
  >
    <input
      className="sc-AxiKw fIhHZr"
      type="checkbox"
    />
    <span
      className="sc-AxhCb fqtWHo"
    />
  </label>
</label>
`;

exports[`Display left label 2`] = `
<label
  className="sc-AxjAm hgwlTJ"
>
  <span
    className="sc-AxhUy yTwGS"
  >
    Label
  </span>
  <label
    className="sc-AxirZ jTtBsr"
    height={34}
    width={60}
  >
    <input
      className="sc-AxiKw fIhHZr"
      type="checkbox"
    />
    <span
      className="sc-AxhCb fqtWHo"
    />
  </label>
</label>
`;

exports[`Display right label 1`] = `
<label
  className="sc-AxjAm hgwlTJ"
>
  <label
    className="sc-AxirZ jTtBsr"
    height={34}
    width={60}
  >
    <input
      className="sc-AxiKw fIhHZr"
      type="checkbox"
    />
    <span
      className="sc-AxhCb fqtWHo"
    />
  </label>
  <span
    className="sc-AxhUy yTwGS"
  >
    Label
  </span>
</label>
`;

exports[`Set input name and value 1`] = `
<label
  className="sc-AxjAm hgwlTJ"
>
  <label
    className="sc-AxirZ jTtBsr"
    height={34}
    width={60}
  >
    <input
      className="sc-AxiKw fIhHZr"
      name="toggle"
      type="checkbox"
      value="toggleValue"
    />
    <span
      className="sc-AxhCb fqtWHo"
    />
  </label>
</label>
`;

exports[`Standard output 1`] = `
<label
  className="sc-AxjAm hgwlTJ"
>
  <label
    className="sc-AxirZ jTtBsr"
    height={34}
    width={60}
  >
    <input
      className="sc-AxiKw fIhHZr"
      type="checkbox"
    />
    <span
      className="sc-AxhCb fqtWHo"
    />
  </label>
</label>
`;
